# jif_lapse_rate

./: .gitignore  README.md  requirements.txt  ~$pse rate manual.docx
data/: Overview Data Availability.xlsx
data/2022/raw/: Cleaver_temp_track.csv  GPSElevData_LapseRateProj_2022.xlsx
data/2023/: sensor_inventory.xlsx  ~$sensor_inventory.xlsx
data/2023/_archive/: deployment_log.xlsx
data/2023/deployment logs/: Copy of C18_to_C8.xlsx  Heather_Transect.xlsx
data/2023/deployment_logs/: C18_Vertical.xlsx  C8_Transect.xlsx  TKA.xlsx
data/2023/field_notebook/: IMG_8547.HEIC  IMG_8548.HEIC  IMG_8549.HEIC  IMG_8550.HEIC  IMG_8551.HEIC  IMG_8552.HEIC  IMG_8553.HEIC  IMG_8554.HEIC  IMG_8555.HEIC  IMG_8556.HEIC  IMG_8557.HEIC  IMG_8558.HEIC
docker/: Dockerfile
docs/: Lapse rate manual.docx  preliminary results.pptx  ~$flr_manual.docx
docs/Poster _23/: AGU Poster Round 3!!!.pptx  Notes on Second Round Poster.docx
notebooks/solar_bias_comparison/: uw_roof_wx.csv
notebooks/solar_bias_comparison/data/: 21714618_20240528T1202_20240605T1743.nc  21714743_20240528T1156_20240605T1746.nc  21716170_20240528T1211_20240605T1747.nc  22008794_20240528T1312_20240605T1807.nc
notebooks/xdem/: xdem.ipynb
projects/pcc-proposal-2024/: jif_map.py
reports/Poster _23/: AGU Poster 1st Draft.pptx  Untitled document.docx
src/jiflr/: __init__.py  data.py  pyproject.toml
src/jiflr/scripts/: ReadData_JM_26723.ipynb  Read_iButtons_C18Vert  Read_iButtons_C18Vert.py  calc_lapse_rate.ipynb  calc_lapse_tka.ipynb  zero_point_calibration.html  zero_point_calibration.ipynb
(+192 files in other folders)
